test/fail/globalvar-inferred-error.app
//Global variable GKY_dO has illegal type.
//^ Internal error

application v75_44M_cW6

  var GKY_dO := {} 
  predicate UC ( ) { GKY_dO }